--- a/.eslintrc
+++ b/.eslintrc
@@ -5,12 +5,12 @@
     "es6": true
   },
   "plugins": ["prettier"],
+  "parser": "vue-eslint-parser",
   "parserOptions": {
     "ecmaVersion": 2018,
-    "parser": "babel-eslint",
     "sourceType": "module"
   },
-  "extends": ["plugin:prettier/recommended"],
+  "extends": ["plugin:prettier/recommended", "plugin:vue/vue3-essential"],
   "rules": {
     "prettier/prettier": ["error"]
   }
