--- a/package.json
+++ b/package.json
@@ -7,21 +7,26 @@
   "license": "MIT",
   "private": true,
   "engines": {
-    "node": ">=12.16.3"
+    "node": ">=14.15.1"
   },
-  "dependencies": {},
+  "dependencies": {
+    "vue": "3.0.0"
+  },
   "devDependencies": {
+    "@vue/compiler-sfc": "3.0.0",
     "eslint": "7.15.0",
     "eslint-config-prettier": "7.0.0",
     "eslint-plugin-prettier": "3.2.0",
+    "eslint-plugin-vue": "7.2.0",
     "husky": "4.3.5",
     "lint-staged": "10.5.3",
-    "nodemon": "2.0.6",
-    "prettier": "2.2.1"
+    "prettier": "2.2.1",
+    "vite": "1.0.0-rc.13"
   },
   "scripts": {
-    "dev": "nodemon --inspect .",
-    "lint": "eslint --fix ."
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint --fix src/**/*.{js,vue}"
   },
   "husky": {
     "hooks": {
