--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
   },
   "devDependencies": {
     "@vue/compiler-sfc": "3.0.0",
+    "autoprefixer": "^9",
     "eslint": "7.15.0",
     "eslint-config-prettier": "7.0.0",
     "eslint-plugin-prettier": "3.2.0",
+    "eslint-plugin-tailwind": "0.2.0",
     "eslint-plugin-vue": "7.2.0",
     "husky": "4.3.5",
     "lint-staged": "10.5.3",
+    "postcss": "^7",
     "prettier": "2.2.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vite": "1.0.0-rc.13"
   },
   "scripts": {
