--- a/package.json
+++ b/package.json
@@ -15,21 +15,26 @@
   "devDependencies": {
     "@vue/compiler-sfc": "3.0.0",
     "autoprefixer": "^9",
+    "concurrently": "5.3.0",
     "eslint": "7.15.0",
     "eslint-config-prettier": "7.0.0",
     "eslint-plugin-prettier": "3.2.0",
     "eslint-plugin-tailwind": "0.2.0",
     "eslint-plugin-vue": "7.2.0",
+    "http-server": "0.12.3",
     "husky": "4.3.5",
     "lint-staged": "10.5.3",
     "postcss": "^7",
     "prettier": "2.2.1",
+    "puppeteer": "5.5.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vite": "1.0.0-rc.13"
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "yarn build:html && yarn build:pdf",
+    "build:html": "vite build",
+    "build:pdf": "concurrently -k -s first 'http-server dist' 'sleep 5 && node src/generatePDF'",
     "lint": "eslint --fix src/**/*.{js,vue}"
   },
   "husky": {
