Move the generated PDF so it doesn't get deleted

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           yarn install
           yarn run build
+          mv dist/*.pdf .
           yarn run build:gh-pages
 
       - name: Deploy to gh-pages
