Move PDF back into dist folder

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
           yarn run build
           mv dist/*.pdf .
           yarn run build:gh-pages
+          mv *.pdf dist/
 
       - name: Deploy to gh-pages
         run: |
