--- a/.eslintrc
+++ b/.eslintrc
@@ -7,8 +7,9 @@
   "plugins": ["prettier"],
   "parser": "vue-eslint-parser",
   "parserOptions": {
+    "parser": "babel-eslint",
     "ecmaVersion": 2018,
-    "sourceType": "module"
+    "sourceType": "module",
   },
   "extends": [
     "plugin:prettier/recommended",
