--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@vue/compiler-sfc": "3.0.0",
     "autoprefixer": "^9",
+    "babel-eslint": "10.1.0",
     "concurrently": "5.3.0",
     "eslint": "7.15.0",
     "eslint-config-prettier": "7.0.0",
