--- a/package.json
+++ b/package.json
@@ -10,26 +10,27 @@
     "node": ">=14.15.1"
   },
   "dependencies": {
-    "vue": "3.0.0"
+    "vue": "3.0.5"
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "3.0.0",
-    "autoprefixer": "^9",
+    "@vitejs/plugin-vue": "1.1.4",
+    "@vue/compiler-sfc": "3.0.5",
+    "autoprefixer": "10.2.4",
     "babel-eslint": "10.1.0",
     "concurrently": "5.3.0",
-    "eslint": "7.15.0",
-    "eslint-config-prettier": "7.0.0",
-    "eslint-plugin-prettier": "3.2.0",
+    "eslint": "7.19.0",
+    "eslint-config-prettier": "7.2.0",
+    "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-tailwind": "0.2.0",
-    "eslint-plugin-vue": "7.2.0",
+    "eslint-plugin-vue": "7.5.0",
     "http-server": "0.12.3",
-    "husky": "4.3.5",
+    "husky": "4.3.8",
     "lint-staged": "10.5.3",
-    "postcss": "^7",
+    "postcss": "8.2.4",
     "prettier": "2.2.1",
-    "puppeteer": "5.5.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "vite": "1.0.0-rc.13"
+    "puppeteer": "7.0.1",
+    "tailwindcss": "2.0.2",
+    "vite": "2.0.0-beta.64"
   },
   "scripts": {
     "dev": "vite",
