--- a/package.json
+++ b/package.json
@@ -10,27 +10,32 @@
     "node": ">=14.15.1"
   },
   "dependencies": {
-    "vue": "3.0.5"
+    "vue": "3.1.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "1.1.4",
-    "@vue/compiler-sfc": "3.0.5",
-    "autoprefixer": "10.2.4",
+    "@vitejs/plugin-vue": "1.2.3",
+    "@vue/compiler-sfc": "3.1.2",
+    "autoprefixer": "10.2.6",
     "babel-eslint": "10.1.0",
-    "concurrently": "5.3.0",
-    "eslint": "7.19.0",
-    "eslint-config-prettier": "7.2.0",
-    "eslint-plugin-prettier": "3.3.1",
-    "eslint-plugin-tailwind": "0.2.0",
-    "eslint-plugin-vue": "7.5.0",
+    "concurrently": "6.2.0",
+    "eslint": "7.29.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-prettier": "3.4.0",
+    "eslint-plugin-tailwind": "0.2.1",
+    "eslint-plugin-vue": "7.12.1",
     "http-server": "0.12.3",
-    "husky": "4.3.8",
-    "lint-staged": "10.5.3",
-    "postcss": "8.2.4",
-    "prettier": "2.2.1",
-    "puppeteer": "7.0.1",
-    "tailwindcss": "2.0.2",
-    "vite": "2.0.0-beta.64"
+    "husky": "6.0.0",
+    "lint-staged": "11.0.0",
+    "postcss": "8.3.5",
+    "prettier": "2.3.1",
+    "puppeteer": "10.0.0",
+    "tailwindcss": "2.2.4",
+    "vite": "2.3.8"
+  },
+  "resolutions": {
+    "hosted-git-info": ">=3.0.8",
+    "lodash": ">=4.17.21",
+    "postcss": ">=8.2.10"
   },
   "scripts": {
     "dev": "vite",
