--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,11 @@
 # Node
 node_modules/
 
-# Vue
-dist/
+# NPM / Yarn (use PNPM instead)
+package-lock.json
+yarn.lock
 
-# Husky
-/.husky/_
-/.husky/.gitignore
+# Frontend
+dist/
+dist-ssr/
+*.local
