--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@iconify-json/tabler": "1.1.1",
     "@unocss/preset-icons": "0.27.2",
     "@unocss/reset": "0.27.2",
+    "@unocss/transformer-directives": "0.27.2",
     "@vitejs/plugin-vue": "2.2.4",
     "concurrently": "7.0.0",
     "eslint": "8.10.0",
@@ -75,7 +76,8 @@
     "rules": {
       "prettier/prettier": [
         "error"
-      ]
+      ],
+      "vue/no-v-html": "off"
     },
     "ignorePatterns": [
       "**/node_modules",
