Simplify the Build/Deploy action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,50 +1,24 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
-
-# Controls when the action will run.
+name: Build and Deploy
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+    branches:
+      - main
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  build-and-deploy:
+    concurrency: ci-${{ github.ref }} # Recommended if you intend to make multiple deployments in quick succession.
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Build the site
+      - name: Install and Build 🔧
         run: |
-          yarn install
-          yarn run build
-          mv dist/*.pdf .
-          yarn run build:gh-pages
-          mv *.pdf dist/
+          npm i -g pnpm
+          pnpm i
+          pnpm run build
 
-      - name: Deploy to gh-pages
-        run: |
-          git config --global user.name ${GITHUB_ACTOR}
-          git config --global user.email ${GITHUB_ACTOR}@markomarkovic.github.io
-          git remote add gh-pages https://github.com/markomarkovic/cv.git -t gh-pages
-          git fetch gh-pages
-          git checkout gh-pages
-          git pull --rebase
-          rm -rf assets img .github
-          mv dist/* .
-          rm -rf dist
-          git add .
-          git commit -m "Automatic build `date`"
-          git push
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4.2.5
+        with:
+          branch: gh-pages # The branch the action should deploy to.
+          folder: dist # The folder the action should deploy.
