--- a/package.json
+++ b/package.json
@@ -5,31 +5,32 @@
   "author": "Marko Marković <okram@civokram.com>",
   "license": "MIT",
   "private": true,
+  "type": "module",
   "engines": {
     "node": ">=14.15.1"
   },
   "dependencies": {
-    "vue": "3.3.1"
+    "vue": "3.5.13"
   },
   "devDependencies": {
-    "@iconify-json/tabler": "1.1.74",
-    "@unocss/preset-icons": "0.51.12",
-    "@unocss/reset": "0.51.12",
-    "@unocss/transformer-directives": "0.51.12",
-    "@vitejs/plugin-vue": "4.2.2",
-    "concurrently": "8.0.1",
-    "eslint": "8.40.0",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-vue": "9.12.0",
+    "@iconify-json/tabler": "1.2.14",
+    "@unocss/preset-icons": "65.4.0",
+    "@unocss/reset": "65.4.0",
+    "@unocss/transformer-directives": "65.4.0",
+    "@vitejs/plugin-vue": "5.2.1",
+    "concurrently": "9.1.2",
+    "eslint": "8.57.1",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-vue": "9.32.0",
     "http-server": "14.1.1",
-    "lint-staged": "13.2.2",
-    "prettier": "2.8.8",
-    "puppeteer": "20.1.2",
-    "replace-in-files-cli": "2.1.0",
-    "simple-git-hooks": "2.8.1",
-    "unocss": "0.51.12",
-    "vite": "4.3.5"
+    "lint-staged": "15.3.0",
+    "prettier": "3.4.2",
+    "puppeteer": "24.0.0",
+    "replace-in-files-cli": "3.0.0",
+    "simple-git-hooks": "2.11.1",
+    "unocss": "65.4.0",
+    "vite": "6.0.7"
   },
   "scripts": {
     "build": "pnpm run build:html && pnpm run build:timestamp && pnpm run build:pdf",
