--- a/package.json
+++ b/package.json
@@ -30,14 +30,15 @@
     "replace-in-files-cli": "3.0.0",
     "simple-git-hooks": "2.11.1",
     "unocss": "65.4.0",
-    "vite": "6.0.7"
+    "vite": "6.0.7",
+    "vite-plugin-singlefile": "2.1.0"
   },
   "scripts": {
     "build": "pnpm run build:html && pnpm run build:timestamp && pnpm run build:pdf",
     "build:gh-pages": "vite build --base=/cv/",
     "build:html": "vite build",
     "build:pdf": "concurrently -k -s first 'http-server dist' 'sleep 5 && node src/generatePDF'",
-    "build:timestamp": "pnpx replace-in-files-cli --string __LAST_UPDATE__ --replacement `date -I` dist/assets/index-*.js",
+    "build:timestamp": "pnpx replace-in-files-cli --string __LAST_UPDATE__ --replacement `date -I` dist/index.html",
     "dev": "vite",
     "lint": "eslint . --ext=.js,.vue --fix",
     "prepare": "pnpx simple-git-hooks"
